--- a/NRaft/NRaft.csproj
+++ b/NRaft/NRaft.csproj
@@ -40,6 +40,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AppendEntriesResponse.cs" />
+    <Compile Include="AppendEntriesRpc.cs" />
+    <Compile Include="IDispatcher.cs" />
+    <Compile Include="LogEntry.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="State.cs" />
   </ItemGroup>
