--- a/NRaft/NRaft.csproj
+++ b/NRaft/NRaft.csproj
@@ -45,6 +45,8 @@
     <Compile Include="IDispatcher.cs" />
     <Compile Include="LogEntry.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RequestVoteResponse.cs" />
+    <Compile Include="RequestVoteRpc.cs" />
     <Compile Include="State.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
