--- a/NRaft/NRaft.csproj
+++ b/NRaft/NRaft.csproj
@@ -48,6 +48,7 @@
     <Compile Include="RequestVoteResponse.cs" />
     <Compile Include="RequestVoteRpc.cs" />
     <Compile Include="State.cs" />
+    <Compile Include="Types.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
