--- a/NRaft.Tests/NRaft.Tests.csproj
+++ b/NRaft.Tests/NRaft.Tests.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Scratchpad.cs" />
     <Compile Include="StateTests\BecomeCandidateTests.cs" />
+    <Compile Include="StateTests\BecomeLeaderTests.cs" />
     <Compile Include="StateTests\OnAppendEntriesResponseTests.cs" />
     <Compile Include="StateTests\OnAppendEntriesTests.cs" />
     <Compile Include="StateTests\OnRequestVoteResponseTests.cs" />
