tests: add tests for sending AppendEntries

--- a/NRaft.Tests/NRaft.Tests.csproj
+++ b/NRaft.Tests/NRaft.Tests.csproj
@@ -72,6 +72,7 @@
     <Compile Include="StateTests\OnAppendEntriesTests.cs" />
     <Compile Include="StateTests\OnRequestVoteResponseTests.cs" />
     <Compile Include="StateTests\OnRequestVoteTests.cs" />
+    <Compile Include="StateTests\SendAppendEntriesTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
