quorum: add function for generating all possible quorums

--- a/NRaft.Tests/NRaft.Tests.csproj
+++ b/NRaft.Tests/NRaft.Tests.csproj
@@ -64,6 +64,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Infrastructure\QuorumTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Scratchpad.cs" />
     <Compile Include="StateTests\BecomeCandidateTests.cs" />
