--- a/NRaft/NRaft.csproj
+++ b/NRaft/NRaft.csproj
@@ -44,13 +44,13 @@
     <Compile Include="AppendEntriesRpc.cs" />
     <Compile Include="IDispatcher.cs" />
     <Compile Include="Infrastructure\Quorum.cs" />
-    <Compile Include="LightweightCache.cs" />
+    <Compile Include="Infrastructure\LightweightCache.cs" />
     <Compile Include="LogEntry.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RequestVoteResponse.cs" />
     <Compile Include="RequestVoteRpc.cs" />
     <Compile Include="State.cs" />
-    <Compile Include="Timeout.cs" />
+    <Compile Include="Infrastructure\Timeout.cs" />
     <Compile Include="Types.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
