--- a/NRaft/NRaft.csproj
+++ b/NRaft/NRaft.csproj
@@ -40,15 +40,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AppendEntriesResponse.cs" />
-    <Compile Include="AppendEntriesRpc.cs" />
+    <Compile Include="Messages\AppendEntriesResponse.cs" />
+    <Compile Include="Messages\AppendEntriesRpc.cs" />
     <Compile Include="IDispatcher.cs" />
     <Compile Include="Infrastructure\Quorum.cs" />
     <Compile Include="Infrastructure\LightweightCache.cs" />
     <Compile Include="LogEntry.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RequestVoteResponse.cs" />
-    <Compile Include="RequestVoteRpc.cs" />
+    <Compile Include="Messages\RequestVoteResponse.cs" />
+    <Compile Include="Messages\RequestVoteRpc.cs" />
     <Compile Include="State.cs" />
     <Compile Include="Infrastructure\Timeout.cs" />
     <Compile Include="Types.cs" />
