--- a/NRaft.Tests/NRaft.Tests.csproj
+++ b/NRaft.Tests/NRaft.Tests.csproj
@@ -64,6 +64,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AcceptanceTests.cs" />
     <Compile Include="Infrastructure\QuorumTests.cs" />
     <Compile Include="InMemoryDispatcher.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
