--- a/NRaft/NRaft.csproj
+++ b/NRaft/NRaft.csproj
@@ -48,7 +48,7 @@
     <Compile Include="LogEntry.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Messages\RequestVoteResponse.cs" />
-    <Compile Include="Messages\RequestVoteRpc.cs" />
+    <Compile Include="Messages\RequestVoteRequest.cs" />
     <Compile Include="State.cs" />
     <Compile Include="Infrastructure\Timeout.cs" />
     <Compile Include="Types.cs" />
