--- a/NRaft/NRaft.csproj
+++ b/NRaft/NRaft.csproj
@@ -43,7 +43,7 @@
     <Compile Include="Infrastructure\IListener.cs" />
     <Compile Include="Messages\AppendEntriesResponse.cs" />
     <Compile Include="Messages\AppendEntriesRequest.cs" />
-    <Compile Include="Infrastructure\IDispatcher.cs" />
+    <Compile Include="Infrastructure\IConnector.cs" />
     <Compile Include="Infrastructure\Quorum.cs" />
     <Compile Include="Infrastructure\LightweightCache.cs" />
     <Compile Include="LogEntry.cs" />
