--- a/NRaft/NRaft.csproj
+++ b/NRaft/NRaft.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Infrastructure\Timeout.cs" />
     <Compile Include="Storage\InMemoryStore.cs" />
     <Compile Include="Storage\IStore.cs" />
+    <Compile Include="Storage\PersistentFileStore.cs" />
     <Compile Include="Types.cs" />
   </ItemGroup>
   <ItemGroup>
