--- a/NRaft/NRaft.csproj
+++ b/NRaft/NRaft.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Messages\RequestVoteRequest.cs" />
     <Compile Include="State.cs" />
     <Compile Include="Infrastructure\Timeout.cs" />
+    <Compile Include="Storage\IFileSystem.cs" />
     <Compile Include="Storage\InMemoryStore.cs" />
     <Compile Include="Storage\IStore.cs" />
     <Compile Include="Storage\PersistentFileStore.cs" />
