persistentFileStoreTests: add tests for writing and re-reading values

--- a/NRaft.Tests/NRaft.Tests.csproj
+++ b/NRaft.Tests/NRaft.Tests.csproj
@@ -71,6 +71,7 @@
     <Compile Include="AcceptanceTests.cs" />
     <Compile Include="Infrastructure\QuorumTests.cs" />
     <Compile Include="InMemoryConnector.cs" />
+    <Compile Include="InMemoryFileSystem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Scratchpad.cs" />
     <Compile Include="StateTests\AdvanceCommitIndexTests.cs" />
