--- a/NRaft.Tests/NRaft.Tests.csproj
+++ b/NRaft.Tests/NRaft.Tests.csproj
@@ -74,16 +74,16 @@
     <Compile Include="InMemoryFileSystem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Scratchpad.cs" />
-    <Compile Include="StateTests\AdvanceCommitIndexTests.cs" />
-    <Compile Include="StateTests\BecomeCandidateTests.cs" />
-    <Compile Include="StateTests\BecomeLeaderTests.cs" />
-    <Compile Include="StateTests\OnAppendEntriesResponseTests.cs" />
-    <Compile Include="StateTests\OnAppendEntriesTests.cs" />
-    <Compile Include="StateTests\OnClientRequestTests.cs" />
-    <Compile Include="StateTests\OnRequestVoteResponseTests.cs" />
-    <Compile Include="StateTests\OnRequestVoteTests.cs" />
-    <Compile Include="StateTests\SendAppendEntriesTests.cs" />
-    <Compile Include="StateTests\StateTests.cs" />
+    <Compile Include="NodeTests\AdvanceCommitIndexTests.cs" />
+    <Compile Include="NodeTests\BecomeCandidateTests.cs" />
+    <Compile Include="NodeTests\BecomeLeaderTests.cs" />
+    <Compile Include="NodeTests\OnAppendEntriesResponseTests.cs" />
+    <Compile Include="NodeTests\OnAppendEntriesTests.cs" />
+    <Compile Include="NodeTests\OnClientRequestTests.cs" />
+    <Compile Include="NodeTests\OnRequestVoteResponseTests.cs" />
+    <Compile Include="NodeTests\OnRequestVoteTests.cs" />
+    <Compile Include="NodeTests\SendAppendEntriesTests.cs" />
+    <Compile Include="NodeTests\NodeTests.cs" />
     <Compile Include="Storage\PersistentFileStoreTests.cs" />
   </ItemGroup>
   <ItemGroup>
