--- a/NRaft/NRaft.csproj
+++ b/NRaft/NRaft.csproj
@@ -53,7 +53,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Messages\RequestVoteResponse.cs" />
     <Compile Include="Messages\RequestVoteRequest.cs" />
-    <Compile Include="State.cs" />
+    <Compile Include="Node.cs" />
     <Compile Include="Infrastructure\Timeout.cs" />
     <Compile Include="Storage\IFileSystem.cs" />
     <Compile Include="Storage\InMemoryStore.cs" />
