tests: add tests for election timeout

--- a/NRaft.Tests/NRaft.Tests.csproj
+++ b/NRaft.Tests/NRaft.Tests.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Infrastructure\QuorumTests.cs" />
     <Compile Include="InMemoryConnector.cs" />
     <Compile Include="InMemoryFileSystem.cs" />
+    <Compile Include="NodeTests\CandidateTests.cs" />
     <Compile Include="NodeTests\FollowerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Scratchpad.cs" />
