tests: add controllable clock for simulating timeout events

--- a/NRaft.Tests/NRaft.Tests.csproj
+++ b/NRaft.Tests/NRaft.Tests.csproj
@@ -69,7 +69,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AcceptanceTests.cs" />
+    <Compile Include="TestInfrastructure\ControllableClock.cs" />
     <Compile Include="Infrastructure\QuorumTests.cs" />
+    <Compile Include="TestInfrastructure\ElectionTimer.cs" />
+    <Compile Include="TestInfrastructure\HeartbeatTimer.cs" />
     <Compile Include="TestInfrastructure\InMemoryConnector.cs" />
     <Compile Include="TestInfrastructure\InMemoryFileSystem.cs" />
     <Compile Include="NodeTests\CandidateTests.cs" />
