IConnector: add logging IConnector decorator

--- a/NRaft/NRaft.csproj
+++ b/NRaft/NRaft.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Infrastructure\Clock.cs" />
     <Compile Include="Infrastructure\IClock.cs" />
     <Compile Include="Infrastructure\IPulseable.cs" />
+    <Compile Include="Infrastructure\LoggingConnector.cs" />
     <Compile Include="Messages\AppendEntriesResponse.cs" />
     <Compile Include="Messages\AppendEntriesRequest.cs" />
     <Compile Include="Infrastructure\IConnector.cs" />
