--- a/NRaft/NRaft.csproj
+++ b/NRaft/NRaft.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Storage\InMemoryStore.cs" />
     <Compile Include="Storage\IStore.cs" />
     <Compile Include="Storage\PersistentFileStore.cs" />
+    <Compile Include="Timeouts.cs" />
     <Compile Include="Types.cs" />
   </ItemGroup>
   <ItemGroup>
