timeout: add tests

--- a/NRaft.Tests/NRaft.Tests.csproj
+++ b/NRaft.Tests/NRaft.Tests.csproj
@@ -69,6 +69,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AcceptanceTests.cs" />
+    <Compile Include="Infrastructure\TimeoutTests.cs" />
     <Compile Include="TestInfrastructure\ControllableClock.cs" />
     <Compile Include="Infrastructure\QuorumTests.cs" />
     <Compile Include="TestInfrastructure\ElectionTimer.cs" />
