IElectionTimeout: move to separate file

--- a/NRaft/NRaft.csproj
+++ b/NRaft/NRaft.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Timeouts.cs" />
     <Compile Include="Timing\ElectionTimeout.cs" />
     <Compile Include="Timing\Heart.cs" />
+    <Compile Include="Timing\IElectionTimeout.cs" />
     <Compile Include="Timing\IHeart.cs" />
     <Compile Include="Types.cs" />
   </ItemGroup>
