--- a/NRaft/NRaft.csproj
+++ b/NRaft/NRaft.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Timing\Heart.cs" />
     <Compile Include="Timing\IElectionTimeout.cs" />
     <Compile Include="Timing\IHeart.cs" />
+    <Compile Include="Timing\PulseMonitor.cs" />
     <Compile Include="Types.cs" />
   </ItemGroup>
   <ItemGroup>
